--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -5,20 +5,6 @@ body {
 }
 
 h1 {
-	text-align: center;
-	color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-	font: 500% "Trebuchet MS", Arial, Helvetica, sans-serif;
-    padding: 20px 20px 20px 40px;
-    display: block;
-    margin: -30px -30px 10px -30px;
-    border-radius: 5px 5px 0px 0px;
-    -webkit-border-radius: 5px 5px 0px 0px;
-    -moz-border-radius: 5px 5px 0px 0px;
 }
 
 a {
@@ -35,33 +21,56 @@ h2 {
     1px 1px 0 #000;
 	font-family: Tahoma, Geneva, sans-serif;
 }
+/* styling for the 404 image */
 
-img {
+.fadeimage {
+    position: relative;
     display: block;
-    margin: 0 auto;
+    text-align: center;
 }
-
-p {
-	text-align: center;
-    color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-    font: 100% "Trebuchet MS", Arial, Helvetica, sans-serif;
+.fadeOne {
+    z-index: 0;
+    position: relative;
+    left: 0;
+    transition: opacity 1s;
+}
+.fadeTwo {
+    z-index: 1;
+    position: relative;
+    left: 0;
+    transition: opacity 1s;
+}
+.fadeOne:hover {
+    opacity: 0;
+}
+.fadeTwo:hover {
+    opacity: 0;
+}
+.image {
+    text-align: center;
+    width: 100px;
+    height: 100px;
+}
+.title2 {
+    font: 10px "Trebuchet MS", Arial, Helvetica, sans-serif;
     padding: 20px 20px 20px 40px;
     display: block;
     margin: -30px -30px 10px -30px;
+    color: #FFF;
+    background: #87cefa;
+    text-shadow: 1px 1px 1px #949494;
     border-radius: 5px 5px 0px 0px;
     -webkit-border-radius: 5px 5px 0px 0px;
     -moz-border-radius: 5px 5px 0px 0px;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 500px;
 }
 
-form {
-	text-align: center;
-}
+/* styling for the forms */
 .form {
+    text-align: center;
     margin-left:auto;
     margin-right:auto;
     max-width: 500px;
@@ -87,7 +96,25 @@ form {
     border-bottom:1px solid #87cefa;
 
 }
-.smart-green h1>span {
+.title {
+    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: -50px;
+    padding-right: -50px;
+    display: block;
+    margin: 10px 10px 10px 10px;
+    color: #FFF;
+    background: #87cefa;
+    text-shadow: 1px 1px 1px #949494;
+    border-radius: 0px 0px 0px 0px;
+    -webkit-border-radius: 5px 5px 0px 0px;
+    -moz-border-radius: 5px 5px 0px 0px;
+    border-bottom:1px solid #87cefa;
+    text-align: center;
+
+}
+.form h1>span {
     display: block;
     font-size: 11px;
     color: #FFF;
@@ -146,54 +173,9 @@ form {
 }
 
 .home { 
-        background: url('/images/Etihad-Stadium.jpg') no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-}
-
-.fadein {
-    width: 100%; 
-    height: 100%; 
-    position: relative;
-}
-
-.fadein img {
-    width: 100%; 
-    height: 100%; 
-    position: relative;
-}
-
-.effect-box.football {
-    padding-top: 56px;
-    background-color: #00cc9d;
-    background-image: 
-        repeating-linear-gradient(315deg, rgba(255,255,255,0.3), rgba(255,255,255,0.3) 7%, rgba(255,255,255,0) 7%, rgba(255,255,255,0) 14%);
-}
-.effect-box.football > h1 {
-    margin: 0px;
-
-    font-family: 'Changa One', Impact, sans-serif;
-    color: white;
-    font-size: 78px;
-    font-weight: normal;
-    text-shadow: 
-        0 1px 0 #e3e3e3,
-        0 3px 0 #c9c9c9,
-        0 5px 0 #b8b8b8,
-        0 7px 0 #ababab,
-        0 9px 0 #a1a1a1,
-        0 11px 0 #969696,
-        0 0 10px rgba(0,0,0,0.15),
-        0 7px 10px rgba(0,0,0,0.1),
-        0 11px 10px rgba(0,0,0,0.45);
-}
-@media (max-width: 480px) {
-    .effect-box.football {
-        padding-top: 63px;
-    }
-    .effect-box.football > h1 {
-        font-size: 65px;
-    }
+    background: url('/images/Etihad-Stadium.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
