--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+/* General styles */
 body {
   padding: 100px;
   color: #333333;
@@ -68,7 +69,7 @@ h2 {
     max-width: 500px;
 }
 
-/* styling for the forms */
+/* styling for the queryInterface forms */
 .form {
     text-align: center;
     margin-left:auto;
@@ -202,21 +203,6 @@ h2 {
     z-index: -1;
     background: rgba(black, .08);
     border-radius: 4px;
-  }
-
-  h1 {
-    margin: -20px -20px 21px;
-    line-height: 40px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #555;
-    text-align: center;
-    text-shadow: 0 1px white;
-    background: #f3f3f3;
-    border-bottom: 1px solid #cfcfcf;
-    border-radius: 3px 3px 0 0;
-    @include linear-gradient(top, whiteffd, #eef2f5);
-    @include box-shadow(0 1px #f5f5f5);
   }
 
   p { margin: 20px 0 0; }
