--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,4 +1,6 @@
-/* General styles */
+/* 
+* General styles 
+*/
 body {
   padding: 100px;
   color: #333333;
@@ -22,8 +24,9 @@ h2 {
     1px 1px 0 #000;
 	font-family: Tahoma, Geneva, sans-serif;
 }
-/* styling for the 404 image */
-
+/* 
+* styling for the 404 image - issue with centering the images on top of each other, currently displayed side by side
+*/
 .fadeimage {
     position: relative;
     display: block;
@@ -69,7 +72,9 @@ h2 {
     max-width: 500px;
 }
 
-/* styling for the queryInterface forms */
+/* 
+* styling for the queryInterface form - adapted from online resources 
+*/
 .form {
     text-align: center;
     margin-left:auto;
@@ -172,7 +177,9 @@ h2 {
 .form .button:hover {
     background-color:#80A24A;
 }
-
+/* 
+* Style for creating the backgorund to all the HTML pages 
+*/
 .home { 
     background: url('/images/Etihad-Stadium.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -180,7 +187,9 @@ h2 {
     -o-background-size: cover;
     background-size: cover;
 }
-/* index.html styles - mainly for the log in form*/
+/* 
+* index.html styles - mainly for the log in form - adapted from online resources
+*/
 
 .container {
   margin: 80px auto;
@@ -272,13 +281,13 @@ input[type=text], input[type=password] {
   border-color: #c4c4c4 #d1d1d1 #d4d4d4;
   border-radius: 2px;
   outline: 5px solid #eff4f7;
-  -moz-outline-radius: 3px; // Can we get this on WebKit please?
+  -moz-outline-radius: 3px;
   @include box-shadow(inset 0 1px 3px rgba(black, .12));
 
   &:focus {
     border-color: #7dc9e2;
     outline-color: #dceefc;
-    outline-offset: 0; // WebKit sets this to -1 by default
+    outline-offset: 0;
   }
 }
 
@@ -294,7 +303,7 @@ input[type=submit] {
   border-color: #b4ccce #b3c0c8 #9eb9c2;
   border-radius: 16px;
   outline: 0;
-  @include box-sizing(content-box); // Firefox sets this to border-box by default
+  @include box-sizing(content-box);
   @include linear-gradient(top, #edf5f8, #cde5ef);
   @include box-shadow(inset 0 1px white, 0 1px 2px rgba(black, .15));
 
