Commit, added more functionality to twitter.js, mainly team player accounts and a function to return those players most recent tweet, also changed some of the functionality in app.js and the html pages

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -2,12 +2,13 @@
 * General styling
 */
 body {
-  padding: 100px;
-  color: #333333;
-  font-family: Tahoma, Geneva, sans-serif;
+    padding: 100px;
+    color: #333333;
+    font-family: Tahoma, Geneva, sans-serif;
 }
 
 h1 {
+
 }
 
 a {
@@ -22,31 +23,31 @@ h2 {
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
-	font-family: Tahoma, Geneva, sans-serif;
+	  font-family: Tahoma, Geneva, sans-serif;
 }
 /*
 * images for the suggestions of twitter profiles
 */
-select#suggestions option[value="Arsenal"]   { background-image:url('/images/A.jpg'); }
-select#suggestions option[value="AVFCOfficial"] { background-image:url('/images/AV.png'); }
-select#suggestions option[value="afcbournemouth"] { background-image:url('/images/BO.jpg'); }
-select#suggestions option[value="ChelseaFC"]   { background-image:url('/images/CH.jpg'); }
-select#suggestions option[value="CPFC"] { background-image:url('/images/CP.jpg'); }
-select#suggestions option[value="Everton"] { background-image:url('/images/EVE.jpg'); }
-select#suggestions option[value="LCFC"]   { background-image:url('/images/LC.jpg');  }
-select#suggestions option[value="LFC"] { background-image:url('/images/L.jpg');  }
-select#suggestions option[value="MCFC"] { background-image:url('/images/MC.jpg');  }
-select#suggestions option[value="ManUtd"]   { background-image:url('/images/MU.jpg');  }
-select#suggestions option[value="NUFC"] { background-image:url('/images/NU.jpg');  }
-select#suggestions option[value="NorwichCityFC"] { background-image:url('/images/NC.png');  }
-select#suggestions option[value="SouthamptonFC"]   { background-image:url('/images/S.png');  }
-select#suggestions option[value="stokecity"] { background-image:url('/images/SC.jpg');  }
-select#suggestions option[value="SunderlandAFC"] { background-image:url('/images/SUN.jpg');  }
-select#suggestions option[value="SwansOfficial"]   { background-image:url('/images/SW.jpg');  }
-select#suggestions option[value="SpursOfficial"] { background-image:url('/images/TH.jpg');  }
-select#suggestions option[value="WBAFCofficial"] { background-image:url('/images/WBA.jpg');  }
-select#suggestions option[value="whufc_official"] { background-image:url('/images/WH.jpg');  }
-select#suggestions option[value="WatfordFC"] { background-image:url('/images/W.jpg');  }
+datalist#suggestions option[value="Arsenal"]   { background-image:url('/images/A.jpg'); }
+datalist#suggestions option[value="AVFCOfficial"] { background-image:url('/images/AV.png'); }
+datalist#suggestions option[value="afcbournemouth"] { background-image:url('/images/BO.jpg'); }
+datalist#suggestions option[value="ChelseaFC"]   { background-image:url('/images/CH.jpg'); }
+datalist#suggestions option[value="CPFC"] { background-image:url('/images/CP.jpg'); }
+datalist#suggestions option[value="Everton"] { background-image:url('/images/EVE.jpg'); }
+datalist#suggestions option[value="LCFC"]   { background-image:url('/images/LC.jpg');  }
+datalist#suggestions option[value="LFC"] { background-image:url('/images/L.jpg');  }
+datalist#suggestions option[value="MCFC"] { background-image:url('/images/MC.jpg');  }
+datalist#suggestions option[value="ManUtd"]   { background-image:url('/images/MU.jpg');  }
+datalist#suggestions option[value="NUFC"] { background-image:url('/images/NU.jpg');  }
+datalist#suggestions option[value="NorwichCityFC"] { background-image:url('/images/NC.png');  }
+datalist#suggestions option[value="SouthamptonFC"]   { background-image:url('/images/S.png');  }
+datalist#suggestions option[value="stokecity"] { background-image:url('/images/SC.jpg');  }
+datalist#suggestions option[value="SunderlandAFC"] { background-image:url('/images/SUN.jpg');  }
+datalist#suggestions option[value="SwansOfficial"]   { background-image:url('/images/SW.jpg');  }
+datalist#suggestions option[value="SpursOfficial"] { background-image:url('/images/TH.jpg');  }
+datalist#suggestions option[value="WBAFCofficial"] { background-image:url('/images/WBA.jpg');  }
+datalist#suggestions option[value="whufc_official"] { background-image:url('/images/WH.jpg');  }
+datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W.jpg');  }
 /* 
 * styling for the 404 image - issue with centering the images on top of each other, 
 * currently displayed side by side
@@ -94,6 +95,9 @@ select#suggestions option[value="WatfordFC"] { background-image:url('/images/W.j
     margin-left:auto;
     margin-right:auto;
     max-width: 500px;
+}
+.title2 a {
+    font: 20px "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 /* 
 * styling for the queryInterface form - adapted from online resources 
@@ -184,7 +188,7 @@ select#suggestions option[value="WatfordFC"] { background-image:url('/images/W.j
     width:100%;
     height:30px;
 }
-.form .button {
+.form.button {
     background-color: #87cefa;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -193,9 +197,6 @@ select#suggestions option[value="WatfordFC"] { background-image:url('/images/W.j
     padding: 10px 25px 10px 25px;
     color: #FFF;
     text-shadow: 1px 1px 1px #949494;
-}
-.form .button:hover {
-    background-color:#80A24A;
 }
 /* 
 * Style for creating the backgorund to all the HTML pages 
