--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,37 +1,54 @@
 /* 
 * General styling
 */
-
-.map-canvas{
-    display: block;
-    text-align: center;
-    background-color:#FFD700;
-    width:50%;
-    height:300pt;
+br {
+   line-height: 150%;
 }
-body {
-    /*padding: 50px;*/
-    color: #333333;
-    font-family: Tahoma, Geneva, sans-serif;
+label {
+  display: block;
+  color: white;
 }
-
 h1 {
-
+  font-size: 100px;
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
 }
-
-a {
-    color: #00B7FF;
-}
-
 h2 { 
-    text-align: center;
-    color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-	  font-family: Tahoma, Geneva, sans-serif;
+    top: 200px; 
+    left: 0; 
+    width: 100%;
+}
+h2 span { 
+   font-size: 25px;
+   color: white; 
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300; 
+}
+h2 span.spacer {
+    padding:0 5px;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+}
+.wrapper{
+  margin-top: 100px;
+  margin-right: 300px;
+  margin-left: 300px;
+  margin-bottom: 100px;
+  position: relative;
+  letter-spacing: 1px;  
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 50px; 
+}
+.title { 
+  text-align: center;
+  width: 100%; /* for IE 6 */
+  padding-bottom: 10px;
+  padding-top: 25px;
+}
+a {
+  color: #00B7FF;
 }
 /*
 * images for the suggestions of twitter profiles
@@ -56,6 +73,69 @@ datalist#suggestions option[value="SpursOfficial"] { background-image:url('/imag
 datalist#suggestions option[value="WBAFCofficial"] { background-image:url('/images/WBA.jpg');  }
 datalist#suggestions option[value="whufc_official"] { background-image:url('/images/WH.jpg');  }
 datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W.jpg');  }
+/* 
+* index.html styles - mainly for the log in form - adapted from online resources
+*/
+/* new form */ 
+.cf:before,
+.cf:after {
+    content: ""; 
+    display: table;
+}
+
+.cf:after {
+    clear: both;
+}
+.cf {
+    *zoom: 1;
+}
+:focus {
+  outline: 0;
+}
+.loginform {
+  width: 410px;
+  margin: 50px auto;
+  padding: 25px;
+  padding-top: 30px;
+  background-color: rgba(250,250,250,0.5);
+  border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+          inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.loginform ul {
+  padding: 0;
+  margin: 0;
+}
+.loginform li {
+  display: inline;
+  float: left;
+}
+.loginform input:not([type=submit]) {
+  padding: 5px;
+  margin-right: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
+        0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
+}
+.loginform input[type=submit] {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #64c8ef; /* Old browsers */
+  background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  padding: 5px 15px;
+  margin-right: 0;
+  margin-top: 15px;
+  border-radius: 3px;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
 /* 
 * styling for the 404 image - issue with centering the images on top of each other, 
 * currently displayed side by side
@@ -88,6 +168,7 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
     width: 100px;
     height: 100px;
 }
+/*
 .title2 {
     font: 10px "Trebuchet MS", Arial, Helvetica, sans-serif;
     padding: 20px 20px 20px 40px;
@@ -106,10 +187,45 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
 }
 .title2 a {
     font: 20px "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
+}*/
 /* 
-* styling for the queryInterface form - adapted from online resources 
+* styling for the queryInterface - adapted from online resources 
 */
+#toggle-view {
+  position: relative;
+  list-style: none;   
+  color: white; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+}
+
+  #toggle-view li {
+    margin:10px;
+    border-bottom:2px solid #ccc;
+    position:relative;
+    cursor:pointer;
+  }
+  #toggle-view p {
+    text-align: left;
+    font-size: 15px;
+  }
+  
+  #toggle-view h2 {
+    margin:0;
+    text-align: center;
+  }
+
+  #toggle-view span {
+    position:absolute;
+    right:5px; top:0;
+    color:#ccc;
+    font-size:20px;
+  }
+  
+  #toggle-view .panel {
+    margin:5px 0;
+    display:none;
+  }
 .form {
     text-align: center;
     margin-left:auto;
@@ -135,21 +251,6 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
     -webkit-border-radius: 5px 5px 0px 0px;
     -moz-border-radius: 5px 5px 0px 0px;
     border-bottom:1px solid #87cefa;
-
-}
-.title {
-    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
-    padding: 1px 10px 1px 10px;
-    display: block;
-    margin: 50px 200px 10px 200px;
-    color: #FFF;
-    background: #87cefa;
-    text-shadow: 1px 1px 1px #949494;
-    border-radius: 5px 5px 5px 5px;
-    -webkit-border-radius: 5px 5px 5px 5px;
-    -moz-border-radius: 5px 5px 5px 5px;
-    border-bottom:1px solid #87cefa;
-    text-align: center;
 
 }
 .form h1>span {
@@ -216,134 +317,3 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
     -o-background-size: cover;
     background-size: cover;
 }
-/* 
-* index.html styles - mainly for the log in form - adapted from online resources
-*/
-
-.container {
-  margin: 80px auto;
-  width: 640px;
-}
-
-.login {
-  position: relative;
-  margin: 0 auto;
-  padding: 5px 0px 5px 20px;
-  width: 310px;
-  background: white;
-  border-radius: 3px;
-  @include box-shadow(0 0 200px rgba(white, .5), 0 1px 2px rgba(black, .3));
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: -8px; right: -8px; bottom: -8px; left: -8px;
-    z-index: -1;
-    background: rgba(black, .08);
-    border-radius: 4px;
-  }
-
-  p { margin: 20px 0 0; }
-  p:first-child { margin-top: 0; }
-
-  input[type=text], input[type=password] { width: 278px; }
-
-  p.remember_me {
-    float: left;
-    line-height: 31px;
-
-    label {
-      font-size: 12px;
-      color: #777;
-      cursor: pointer;
-    }
-
-    input {
-      position: relative;
-      bottom: 1px;
-      margin-right: 4px;
-      vertical-align: middle;
-    }
-  }
-
-  p.submit { text-align: right; }
-}
-
-.login-help {
-  margin: 20px 0;
-  font-size: 11px;
-  color: white;
-  text-align: center;
-  text-shadow: 0 1px #2a85a1;
-
-  a {
-    color: #cce7fa;
-    text-decoration: none;
-
-    &:hover { text-decoration: underline; }
-  }
-}
-
-:-moz-placeholder {
-  color: #c9c9c9 !important;
-  font-size: 13px;
-}
-
-::-webkit-input-placeholder {
-  color: #ccc;
-  font-size: 13px;
-}
-
-input {
-  font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
-  font-size: 14px;
-}
-
-input[type=text], input[type=password] {
-  margin: 5px;
-  padding: 0 10px;
-  width: 200px;
-  height: 34px;
-  color: #404040;
-  background: white;
-  border: 1px solid;
-  border-color: #c4c4c4 #d1d1d1 #d4d4d4;
-  border-radius: 2px;
-  outline: 5px solid #eff4f7;
-  -moz-outline-radius: 3px;
-  @include box-shadow(inset 0 1px 3px rgba(black, .12));
-
-  &:focus {
-    border-color: #7dc9e2;
-    outline-color: #dceefc;
-    outline-offset: 0;
-  }
-}
-
-input[type=submit] {
-  padding: 0 18px;
-  height: 29px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #527881;
-  text-shadow: 0 1px #e3f1f1;
-  background: #cde5ef;
-  border: 1px solid;
-  border-color: #b4ccce #b3c0c8 #9eb9c2;
-  border-radius: 16px;
-  outline: 0;
-  @include box-sizing(content-box);
-  @include linear-gradient(top, #edf5f8, #cde5ef);
-  @include box-shadow(inset 0 1px white, 0 1px 2px rgba(black, .15));
-
-  &:active {
-    background: #cde5ef;
-    border-color: #9eb9c2 #b3c0c8 #b4ccce;
-    @include box-shadow(inset 0 0 3px rgba(black, .2));
-  }
-}
-
-.lt-ie9 {
-  input[type=text], input[type=password] { line-height: 34px; }
-}
-
