changes to the logout button

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -96,6 +96,8 @@ a {
   background: rgb(0, 0, 0); /* fallback color */
   background: rgba(0, 0, 0, 0.7);
   padding: 50px; 
+  display: inline-block;
+  text-align: center;
 }
 .oops-wrapper{
   margin-top: 100px;
@@ -113,6 +115,26 @@ a {
   padding-bottom: 10px;
 }
 /*
+* Log out button
+*/
+.logout{
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #64c8ef; /* Old browsers */
+  background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  padding: 5px 15px;
+  margin-right: 10px;
+  margin-top: 15px;
+  border-radius: 3px;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+/*
 * Map canvas styling
 */
 #map-canvas {
@@ -121,7 +143,7 @@ a {
   height:200pt;
 }
 /*
-* Iages for the suggestions of twitter profiles
+* Images for the suggestions of twitter profiles
 */
 datalist#suggestions option[value="Arsenal"]   { background-image:url('/images/A.jpg'); }
 datalist#suggestions option[value="AVFCOfficial"] { background-image:url('/images/AV.png'); }
@@ -162,15 +184,14 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
   outline: 0;
 }
 .loginform {
+  margin:0 auto;
   width: 410px;
-  margin: 50px auto;
   padding: 25px;
-  padding-top: 30px;
   background-color: rgba(250,250,250,0.5);
   border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
           inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 5px solid rgba(0, 0, 0, 0.3);
 }
 .loginform ul {
   padding: 0;
@@ -179,11 +200,12 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
 .loginform li {
   display: inline;
   float: left;
+  text-align: left;
 }
 .loginform input:not([type=submit]) {
-  padding: 5px;
-  margin-right: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  margin-right: 15px;
+  border: 3px solid rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
         0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
@@ -204,6 +226,14 @@ datalist#suggestions option[value="WatfordFC"] { background-image:url('/images/W
   margin-top: 15px;
   border-radius: 3px;
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+.register{
+  color: #00B7FF;
+  text-align: center;
+  display: inherit;
+  font-size: 15px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  display: inline;
 }
 /* 
 * styling for the 404 page
