--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -60,13 +60,12 @@ a {
   margin-top: 75px;
   padding: 10px;
   width:1600px;
-  height:1000px;
 }
 .left-wrapper{
   float: left;
-  margin-left: 5px;
+  margin-left: 0px;
   margin-right: 5px;
-  width:500px;
+  width: 500px;
   letter-spacing: 1px;  
   background: rgb(0, 0, 0); /* fallback color */
   background: rgba(0, 0, 0, 0.7);
@@ -74,12 +73,26 @@ a {
 }
 .right-wrapper{
   float: right;
-  max-height: inherit;   
+  max-height: inherit; 
+  max-width: inherit;  
 }
 .bottom-right{
   float: right;
   margin-top: 10px;
+  margin-bottom: 10px;
   width: 800px;
+  height: 918px;
+  letter-spacing: 1px;  
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 50px; 
+}
+.bottom-left{
+  float: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 100px;
+  width: 500px;
   height: 400px;
   letter-spacing: 1px;  
   background: rgb(0, 0, 0); /* fallback color */
